--- a/styles.css
+++ b/styles.css
@@ -1,136 +1,178 @@
+html, body {
+  height: 100%;
+}
+
 body {
-    font-family: Raleway;
-    margin: 0;
-    color: hsl(197, 7%, 79%);
-    }
+  font-family: Raleway;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
+  color: hsl(197, 7%, 79%);
+  overflow-y: hidden;
+  background: radial-gradient(circle at top left, #1B1A28, transparent),
+              radial-gradient(circle at bottom right, #060B14, transparent),
+              radial-gradient(circle at top right, #849784, transparent),
+              radial-gradient(circle at bottom left, #04080F, transparent),
+              radial-gradient(circle at center, #94668A, transparent),
+              radial-gradient(circle at center, #B4BCA5, transparent);
+}
   
-  .body-container {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: radial-gradient(circle at top left, #1B1A28, transparent),
-                radial-gradient(circle at bottom right, #060B14, transparent),
-                radial-gradient(circle at top right, #849784, transparent),
-                radial-gradient(circle at bottom left, #04080F, transparent),
-                radial-gradient(circle at center, #94668A, transparent),
-                radial-gradient(circle at center, #B4BCA5, transparent);
-  }
-  
-  img {
+img {
   height: 200px;
   position: absolute;
   bottom: -20px;
   left: -147px;
+}
+
+.main-container {
+  max-width: 430px;
+  height: auto;
+  background-color: rgb(6, 11, 20, 0.3);
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.heading {
+  width: 430px;
+  height: 100px;
+  background-color: rgb(6, 11, 20, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+  font-size: 40px;
+}
+
+#entertext {
+  font-size: 17px;
+  font-weight: 100;
+  text-align: center;
+  padding-top: 30px;
+}
+
+#text-input {
+  border: none;
+  border-bottom: 1px solid hsl(197, 7%, 69%);
+  background-color: transparent;
+  outline: none;
+  width: 80%;
+  padding-top: 20px;
+  display: block;
+  margin: auto;
+  font-size: 20px;
+  font-family: Montserrat;
+  font-weight: 100;
+  text-align: center;
+  color: hsl(197, 7%, 99%);
+}
+
+#text-input:focus {
+  outline: none;
+  background-color: transparent;
+  border-bottom: 1px solid hsl(0, 79%, 82%);
+}
+
+#check-btn {
+  display: block;
+  margin: auto;
+  margin-top: 50px;
+  width: 80%;
+  height: 60px;
+  border: none;
+  font-size: 25px;
+  font-family: Montserrat;
+  font-weight: 100;
+  color: rgb(44, 46, 49);
+  background-color: hsl(0, 79%, 62%);
+}
+
+#check-btn:hover {
+  background-color: hsl(0, 49%, 52%);
+  color: 	hsl(216, 5%, 10%);
+}
+
+span {
+  display: block;
+  text-align: center;
+  margin-top: 25px;
+  font-size: 17px;
+}
+
+#definition {
+  font-size: 20px;
+  font-weight: 100;
+  text-align: center;
+  padding-top: 20px;
+}
+
+@media (max-width: 768px) {
+  body, html {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+  } 
+
+  body {
+    justify-content: flex-start;
+    padding-top: 80px;
+    padding-bottom: 0px;
   }
-  
+
+  img {
+    height: 215px;
+    bottom: -148px;
+    left: 147px;
+  }
+
   .main-container {
-    max-width: 430px;
-    background-color: rgb(6, 11, 20, 0.3);
-    padding-bottom: 20px;
-    position: relative;
-   }
-  
+    max-width: 320px;
+    min-width: 297px;
+    width: 90%;
+  }  
+
   .heading {
-    width: 430px;
-    height: 100px;
-    background-color: rgb(6, 11, 20, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    max-width: 380px;
+    width: 100%;
+    height: 75px;
   }
-  
+
   h1 {
-    text-align: center;
-    font-size: 40px;
+    font-size: 25px;
   }
-  
-  #entertext {
-    font-size: 17px;
-    font-weight: 100;
-    text-align: center;
-    padding-top: 30px;
-  }
-  
+
   #text-input {
-    border: none;
-    border-bottom: 1px solid hsl(197, 7%, 69%);
-    background-color: transparent;
-    outline: none;
-    width: 80%;
-    padding-top: 20px;
-    display: block;
-    margin: auto;
-    font-size: 20px;
-    font-family: Montserrat;
+    margin-top: -15px;
+    font-size: 14px;
+  }
+
+  #entertext {
+    font-size: 14px;
     font-weight: 100;
     text-align: center;
-    color: hsl(197, 7%, 99%);
+    padding-top: 20px;
   }
-  
-  #text-input:focus {
-    outline: none;
-    background-color: transparent;
-    border-bottom: 1px solid hsl(0, 79%, 82%);
-  }
-  
+
   #check-btn {
     display: block;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 40px;
     width: 80%;
-    height: 60px;
-    border: none;
+    height: 50px;
     font-size: 25px;
-    font-family: Montserrat;
-    font-weight: 100;
-    color: rgb(44, 46, 49);
-    background-color: hsl(0, 79%, 62%);
   }
-  
-  #check-btn:hover {
-     background-color: hsl(0, 49%, 52%);
-     color: 	hsl(216, 5%, 10%);
-  }
-  
-  span {
-    display: block;
-    text-align: center;
-    margin-top: 25px;
-    font-size: 17px;
-  }
-  
+
   #definition {
-    font-size: 20px;
-    font-weight: 100;
-    text-align: center;
-    padding-top: 20px;
-  }
-  
-  @media (max-width: 768px) {
-  
-  img {
-  height: 175px;
-  bottom: -20px;
-  left: -128px;
-  }
-  
-  .main-container {
-    max-width: 380px;
-   }  
-  
-  .heading {
-    width: 380px;
-    height: 85px;
-  }
-  
-  h1 {
-   font-size: 38px;
-  }
-  
-  #definition {
-    font-size: 17px;
+    font-size: 13px;
     padding-top: 15px;
   }
+
+  .def {
+    max-width: 290px;
+    margin: auto;
   }
+}
